# TheLastBattle

./: .gitignore  AllServer.sln  JunkClear.bat  README.md  Readme.md  azure-pipelines.yml  build.bat  clean.bat  close.bat  rebuilddb.bat  start.bat  svnupdate.bat
.github/workflows/: msbuild.yml
BalanceServer/: BalanceServer.sln
BalanceServer/BalanceServer/: BalanceServer.cpp  BalanceServer.vcxproj  BalanceServer.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
CentralServer/: CMakeLists.txt  CentralServer.sln
CentralServer/CSBattleMgr/: CMakeLists.txt  CSBattle.cpp  CSBattle.h  CSBattleMatcher.cpp  CSBattleMgr.cpp  CSBattleMgr.h  CSBattleMgr.vcxproj  CSBattleMgr.vcxproj.filters  CSBattleMgr_AskHandler.cpp  CSBattleMgr_DBCallBacker.cpp  CSBattleMgr_GCMsg.cpp  CSBattleMgr_GSMsg.cpp  CSBattleMgr_RCMsg.cpp  CSBattleMgr_SSMsg.cpp  CSBattleRoom.cpp  CSBattleRoom.h  CSBattle_MsgPoster.cpp  CSCfgMgr.cpp  CSCfgMgr.h  CSGSInfo.cpp  CSGSInfo.h  CSGameLogMgr.cpp  CSGameLogMgr.h  CSGuideBattle.cpp  CSGuideBattle.h  CSKernel.cpp  CSKernel.h  CSKernel_MainThread.cpp  CSMailMgr.cpp  CSMailMgr.h  CSRCInfo.h  CSSSInfo.cpp  CSSSInfo.h  CSScript.cpp  CSScript.h  CSUser.cpp  CSUser.h  CSUserCfgMgr.cpp  CSUserCfgMgr.h  CSUserDBDataStruct.cpp  (+45 more)
CentralServer/CSBattleMgr/BattleMatcher/: CMatchList_Nomal.h  CMatchList_Tianti.h  CMatchList_VsAI.h  CMatchMgr.h  CMatchTeam.h  IMatchList.h
CentralServer/CSBattleMgr/BattleMatcher/src/: CMatchList_Nomal.cpp  CMatchList_Tianti.cpp  CMatchList_VsAI.cpp  CMatchMgr.cpp  CMatchTeam.cpp  IMatchList.cpp
CentralServer/CSBattleMgr/Net/: CSLogSession.cpp  CSLogSession.h  CSNetSessionMgr.cpp  CSNetSessionMgr.h  GateSession.cpp  GateSession.h  LogicRedisSession.cpp  LogicRedisSession.h  ParsePacket.h  RedisSession.cpp  RedisSession.h  RemoteConsoleSession.cpp  RemoteConsoleSession.h  SceneSession.cpp  SceneSession.h
CentralServer/CSBattleMgr/TaskSys/: Task.cpp  Task.h  TaskMgr.cpp  TaskMgr.h
Client/: Assembly-CSharp-Editor-vs.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp-vs.csproj  Assembly-CSharp.csproj  Assembly-UnityScript-Editor-vs.unityproj  Assembly-UnityScript-Editor.unityproj  Assembly-UnityScript-firstpass.unityproj  Assembly-UnityScript-vs.unityproj  Assembly-UnityScript.unityproj  Client-csharp.sln  Client.sln  UnityVS.Client.CSharp.Editor.csproj  UnityVS.Client.CSharp.Plugins.csproj  UnityVS.Client.CSharp.csproj  UnityVS.Client.UnityScript.Plugins.unityproj  UnityVS.Client.UnityScript.unityproj  UnityVS.Client.sln  readme.txt
Client/Assets/: Scripts.7z
Client/FF_Data/: PlayerConnectionConfigFile  level0  mainData  resources.assets  sharedassets1.assets  sharedassets4.assets  sharedassets5.assets
Client/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
CommonCPlus/: CSDataSource.cpp  CSDataSource.h  CommLog.cpp  CommLog.h  DBActiveWrapper.cpp  DBActiveWrapper.h  DBMgr.cpp  DBMgr.h  ELogging.h  SSElementArr.h  SSElementArr.inl  SafeRefPtr.h  Tools.h
CommonCPlus/CommonCPlus/: PreDefine.h
CommonCPlus/Include/: FBAll_Const.h  ServerMath.h
CommonCPlus/SynSocketWrapper/: SynSocketWrapper.cpp  SynSocketWrapper.h
Document/BuildingInstructions/: Ice.txt
ELogging/: DefLogging.cpp  DefLogging.h  ELoggingHeader.h
ELogging/ELogging/: Buffer.h  CMakeLists.txt  ELogging.cpp  ELogging.h  ELogging.vcxproj  ELogging.vcxproj.filters  Logging.cpp  Logging.h  SSActive.cpp  SSActive.h  SSObjectPool.h  ThreadSafeQueue.h  Timer.cpp  Timer.h  dllmain.cpp  stdafx.cpp  stdafx.h
FBALLVoipAndroid/: .project  AndroidManifest.xml  build_class.jar.bat
GateServer/: CMakeLists.txt  GateServer.bash  GateServer.sln
GateServer/GSConsole/: CMakeLists.txt  GSConsole.vcxproj  GSConsole.vcxproj.filters  main.cpp  stdafx.h
GateServer/GSKernel/: CMakeLists.txt  GSKernel.cpp  GSKernel.h  GSKernel.vcxproj  GSKernel.vcxproj.filters  GSKernel_MainThread.cpp  GSKernel_MainThread_CSMsgHandler.cpp  GSKernel_MainThread_CtrlMsgHandler.cpp  GSKernel_MainThread_GCMsgHandler.cpp  GSKernel_MainThread_SSMsgHandler.cpp  GSKernel_MainThread_TestMsg.cpp  GSKernel_UIThread.cpp  GSSSInfo.cpp  GSSSInfo.h  main.cpp  stdafx.cpp  stdafx.h
GateServer/GSKernel/Net/: ClientSession.cpp  ClientSession.h  GSNetSessionMgr.cpp  GSNetSessionMgr.h  M2BSession.cpp  M2BSession.h  M2CSession.cpp  M2CSession.h  M2SSession.cpp  M2SSession.h
LogMgr/: LogMgr.sln
LogServer/: LogServer.sln
LoginServer/: LoginServer.sln
RemoteConsole/: RemoteConsole.sln
Robot/: Robot.sln
SceneServer/: CMakeLists.txt  SceneServer.sln
SceneServer/SSBattleMgr/: BattleLogicThreadActor.cpp  CMakeLists.txt  ISSParameterChangeCallBack.h  ISSightLight.h  Logging.cpp  SSAI.cpp  SSAI.h  SSAI_Building.cpp  SSAI_Building.h  SSAI_Hero.cpp  SSAI_Hero.h  SSAI_HeroRobot.cpp  SSAI_HeroRobot.h  SSAI_Soldier.cpp  SSAI_Soldier.h  SSAI_Wild.cpp  SSAI_Wild.h  SSAStar.cpp  SSAStar.h  SSAltarSev.cpp  SSAltarSev.h  SSArea.cpp  SSArea.h  SSBTreeAct_Absorb.cpp  SSBTreeAct_Absorb.h  SSBTreeAct_BuyItem.cpp  SSBTreeAct_BuyItem.h  SSBTreeAct_FuryExpersion.cpp  SSBTreeAct_FuryExpersion.h  SSBTreeAct_MoveByPath.cpp  SSBTreeAct_MoveByPath.h  SSBTreeAct_NormalAttack.cpp  SSBTreeAct_NormalAttack.h  SSBTreeAct_PutAltarMonster.cpp  SSBTreeAct_PutAltarMonster.h  SSBTreeAct_TransHome.cpp  SSBTreeAct_TransHome.h  SSBTreeAct_UseSkill.cpp  SSBTreeAct_UseSkill.h  SSBTreeAct_Wait.h  (+213 more)
SceneServer/SSBattleMgr/Net/: CentralSession.cpp  CentralSession.h  GateSession.cpp  SSBattleNetSessionMgr.cpp  SSBattleNetSessionMgr.h  SSLogSession.cpp  SSLogSession.h
SceneServer/SSBattleMgr/log/: SSGameLogMgr.cpp  SSGameLogMgr.h
Share/: PointerPoll.h  logger.cpp  logger.h
ThirdFunc/LuaPlus/: CMakeLists.txt  LuaFunction.h  LuaPlus.cpp  LuaPlus.prj  LuaPlus.sln  LuaPlus.vcxproj  LuaPlus.vcxproj.filters  LuaPlusCD.h  LuaState.h  LuaState.inl  LuaState_DumpObject.cpp
ThirdFunc/LuaPlus/src/: lbaselib.c  lobject.c  lstrlib.c  ltm.c  lua.c  luaconf.h  print.c
lib-src/: libcrypto.lib  libmysql.rar  protobuf-2.6.0.tar.bz2
(+2710 files in other folders)
